5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4312/executions/1798_2563.log
== TEST (2019-06-05 15:17:38) 
-- CODE:
from numpy import*
vet = array(eval(input("Vetor: ")))

while(size(vet) > 1):
	aprov = o
	N_monit = 0
	
	for i in range(size(vet)):
		if(vet[i] >= 5):
			aprov = aprov + 1
		else(vet[i] < 7):
			N_monit = N_monit + 1
			
	print(aprov)
	print(N_monit)
	
	vet = array(eval(input("Insira um novo vetor: ")))
			
			
-- ERROR:
File "XXXX", line 11
    else(vet[i] < 7):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 15:17:54) 
-- CODE:
from numpy import*
vet = array(eval(input("Vetor: ")))

while(size(vet) > 1):
	aprov = o
	N_monit = 0
	
	for i in range(size(vet)):
		if(vet[i] >= 5):
			aprov = aprov + 1
		elif(vet[i] < 7):
			N_monit = N_monit + 1
			
	print(aprov)
	print(N_monit)
	
	vet = array(eval(input("Insira um novo vetor: ")))
			
			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 15:18:13) 
-- CODE:
from numpy import*
vet = array(eval(input("Vetor: ")))

while(size(vet) > 1):
	aprov = 0
	N_monit = 0
	
	for i in range(size(vet)):
		if(vet[i] >= 5):
			aprov = aprov + 1
		elif(vet[i] < 7):
			N_monit = N_monit + 1
			
	print(aprov)
	print(N_monit)
	
	vet = array(eval(input("Insira um novo vetor: ")))
			
			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-05 15:18:31) 
-- CODE:
from numpy import*
vet = array(eval(input("Vetor: ")))

while(size(vet) > 1):
	aprov = 0
	N_monit = 0
	
	for i in range(size(vet)):
		if(vet[i] >= 5):
			aprov = aprov + 1
		elif(vet[i] < 7):
			N_monit = N_monit + 1
			
	print(aprov)
	print(N_monit)
	
	vet = array(eval(input("Insira um novo vetor: ")))
			
			
-- EXECUTION TIME:
1.25947
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
6
0
4
5
7
2
3
5
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
11
0
5
3
9
0
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
8
0
6
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-05 15:21:05) 
-- CODE:
from numpy import*
vet = array(eval(input("Vetor: ")))

while(size(vet) > 1):
	aprov = 0
	N_monit = 0
	monit = 0
	
	for i in range(size(vet)):
		if(vet[i] >= 5):
			aprov = aprov + 1
		elif(vet[i] < 7):
			N_monit = N_monit + 1
		elif(vet[i] > 7):
			monit = monit + 1
			
	print(aprov)
	print(monit)
	
	vet = array(eval(input("Insira um novo vetor: ")))
			
			
-- EXECUTION TIME:
1.1065
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
6
0
4
0
7
0
3
0
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
11
0
5
0
9
0
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
8
0
6
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 15:21:06) 
-- CODE:
from numpy import*
vet = array(eval(input("Vetor: ")))

while(size(vet) > 1):
	aprov = 0
	N_monit = 0
	monit = 0
	
	for i in range(size(vet)):
		if(vet[i] >= 5):
			aprov = aprov + 1
		elif(vet[i] < 7):
			N_monit = N_monit + 1
		elif(vet[i] > 7):
			monit = monit + 1
			
	print(aprov)
	print(monit)
	
	vet = array(eval(input("Insira um novo vetor: ")))
			
			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 15:21:09) 
-- CODE:
from numpy import*
vet = array(eval(input("Vetor: ")))

while(size(vet) > 1):
	aprov = 0
	N_monit = 0
	monit = 0
	
	for i in range(size(vet)):
		if(vet[i] >= 5):
			aprov = aprov + 1
		elif(vet[i] < 7):
			N_monit = N_monit + 1
		elif(vet[i] > 7):
			monit = monit + 1
			
	print(aprov)
	print(monit)
	
	vet = array(eval(input("Insira um novo vetor: ")))
			
			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-05 15:21:16) 
-- CODE:
from numpy import*
vet = array(eval(input("Vetor: ")))

while(size(vet) > 1):
	aprov = 0
	N_monit = 0
	monit = 0
	
	for i in range(size(vet)):
		if(vet[i] >= 5):
			aprov = aprov + 1
		elif(vet[i] < 7):
			N_monit = N_monit + 1
		elif(vet[i] > 7):
			monit = monit + 1
			
	print(aprov)
	print(monit)
	
	vet = array(eval(input("Insira um novo vetor: ")))
			
			
-- EXECUTION TIME:
1.458
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
Vetor: 6
0
Insira um novo vetor: 4
0
Insira um novo vetor: 7
0
Insira um novo vetor: 3
0
Insira um novo vetor:
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
6
0
4
0
7
0
3
0
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
Vetor: 11
0
Insira um novo vetor: 5
0
Insira um novo vetor: 9
0
Insira um novo vetor:
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-05 15:21:19) 
-- CODE:
from numpy import*
vet = array(eval(input("Vetor: ")))

while(size(vet) > 1):
	aprov = 0
	N_monit = 0
	monit = 0
	
	for i in range(size(vet)):
		if(vet[i] >= 5):
			aprov = aprov + 1
		elif(vet[i] < 7):
			N_monit = N_monit + 1
		elif(vet[i] > 7):
			monit = monit + 1
			
	print(aprov)
	print(monit)
	
	vet = array(eval(input("Insira um novo vetor: ")))
			
			
-- EXECUTION TIME:
3.81346
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
Vetor: 6
0
Insira um novo vetor: 4
0
Insira um novo vetor: 7
0
Insira um novo vetor: 3
0
Insira um novo vetor:
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
Vetor: 11
0
Insira um novo vetor: 5
0
Insira um novo vetor: 9
0
Insira um novo vetor:
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
Vetor: 8
0
Insira um novo vetor: 6
0
Insira um novo vetor:
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-05 15:21:20) 
-- CODE:
from numpy import*
vet = array(eval(input("Vetor: ")))

while(size(vet) > 1):
	aprov = 0
	N_monit = 0
	monit = 0
	
	for i in range(size(vet)):
		if(vet[i] >= 5):
			aprov = aprov + 1
		elif(vet[i] < 7):
			N_monit = N_monit + 1
		elif(vet[i] > 7):
			monit = monit + 1
			
	print(aprov)
	print(monit)
	
	vet = array(eval(input("Insira um novo vetor: ")))
			
			
-- EXECUTION TIME:
5.59744
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
Vetor: 6
0
Insira um novo vetor: 4
0
Insira um novo vetor: 7
0
Insira um novo vetor: 3
0
Insira um novo vetor:
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
Vetor: 11
0
Insira um novo vetor: 5
0
Insira um novo vetor: 9
0
Insira um novo vetor:
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
Vetor: 8
0
Insira um novo vetor: 6
0
Insira um novo vetor:
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-05 15:21:20) 
-- CODE:
from numpy import*
vet = array(eval(input("Vetor: ")))

while(size(vet) > 1):
	aprov = 0
	N_monit = 0
	monit = 0
	
	for i in range(size(vet)):
		if(vet[i] >= 5):
			aprov = aprov + 1
		elif(vet[i] < 7):
			N_monit = N_monit + 1
		elif(vet[i] > 7):
			monit = monit + 1
			
	print(aprov)
	print(monit)
	
	vet = array(eval(input("Insira um novo vetor: ")))
			
			
-- EXECUTION TIME:
5.99547
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
Vetor: 8
0
Insira um novo vetor: 6
0
Insira um novo vetor:
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:

-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 15:21:56) 
-- CODE:
from numpy import*
vet = array(eval(input("Vetor: ")))

while(size(vet) > 1):
	aprov = 0
	N_monit = 0
	monit = 0
	
	for i in range(size(vet)):
		if(vet[i] >= 5):
			aprov = aprov + 1
		else:
			monit = monit + 1
			
	print(aprov)
	print(monit)
	
	vet = array(eval(input("Insira um novo vetor: ")))
			
			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 15:25:28) 
-- CODE:
from numpy import*
vet = array(eval(input("Vetor: ")))

while(size(vet) > 1):

	x = 0
	
	for i in range(size(vet)):
		if(vet[i] >= 5 and vet[i] < 7):
			x = x + 1
	
	print(x)
	
	vet = array(eval(input("Insira um novo vetor: ")))
			
			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-05 15:26:07) 
-- CODE:
from numpy import*
vet = array(eval(input("Vetor: ")))

while(size(vet) > 1):

	x = 0
	
	for i in range(size(vet)):
		if(vet[i] >= 5 and vet[i] < 7):
			x = x + 1
	
	print(x)
	
	vet = array(eval(input("Insira um novo vetor: ")))
			
			
-- EXECUTION TIME:
1.01946
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
6
0
3
1
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
11
4
1
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
5
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 08:42:43) 
-- CODE:
from numpy import*
vet = array(eval(input("Vetor: ")))

while(size(vet) > 1):

	x = 0
	
	for i in range(size(vet)):
		if(vet[i] >= 5 and vet[i] < 7):
			x = x + 1
	
	print(x)
	
	vet = array(eval(input("Insira um novo vetor: ")))
			
			
-- EXECUTION TIME:
2.01468
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
6
0
3
1
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
11
4
1
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
5
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 08:42:44) 
-- CODE:
from numpy import*
vet = array(eval(input("Vetor: ")))

while(size(vet) > 1):

	x = 0
	
	for i in range(size(vet)):
		if(vet[i] >= 5 and vet[i] < 7):
			x = x + 1
	
	print(x)
	
	vet = array(eval(input("Insira um novo vetor: ")))
			
			
-- EXECUTION TIME:
2.51173
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
6
0
3
1
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
11
4
1
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
5
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-16 12:46:47) 
-- CODE:
from numpy import*
vet = array(eval(input("Vetor: ")))

while(size(vet) > 1):

	x = 0
	
	for i in range(size(vet)):
		if(vet[i] >= 5 and vet[i] < 7):
			x = x + 1
	
	print(x)
	
	vet = array(eval(input("Insira um novo vetor: ")))
			
			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
